# flask-smorest

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-release.yml  scorecard.yml  tests.yml
docs/: Makefile  advanced.rst  api_reference.rst  arguments.rst  conf.py  etag.rst  index.rst  make.bat  openapi.rst  pagination.rst  parameters.rst  quickstart.rst  requirements.txt  response.rst
docs/_templates/: donate.html
flask_rest_api/: __init__.py  args_parser.py  arguments.py  blueprint.py  compat.py  error_handler.py  error_handlers.py  etag.py  exceptions.py  fields.py  marshal.py  pagination.py  response.py  utils.py
flask_rest_api/spec/: __init__.py  field_converters.py  plugin.py  plugins.py
flask_rest_api/spec/templates/: redoc.html  swagger_ui.html  swagger_ui_redirect.html
flask_smorest/: __init__.py  arguments.py  blueprint.py  compat.py  config.py  error_handler.py  etag.py  exceptions.py  fields.py  globals.py  pagination.py  prefixed_config.py  response.py  utils.py
flask_smorest/plugin/: abc.py  built_in.py
flask_smorest/spec/: __init__.py  constants.py  field_converters.py  plugins.py
flask_smorest/spec/templates/: rapidoc.html  redoc.html  swagger_ui.html
flask_smorest/static/js/: swagger-ui-bundle.js
src/flask_smorest/: __init__.py  arguments.py  blueprint.py  error_handler.py  etag.py  exceptions.py  fields.py  pagination.py  response.py  utils.py
src/flask_smorest/spec/: __init__.py  field_converters.py  plugins.py
tests/: conftest.py  mocks.py  test_api.py  test_args_parser.py  test_arguments.py  test_blueprint.py  test_error_handler.py  test_error_handlers.py  test_etag.py  test_examples.py  test_full_example.py  test_pagination.py  test_plugin.py  test_response.py  test_spec.py  test_utils.py  utils.py
